@@ -1,3 +1,3 @@
 use 5.008005;
-use Module::Build::Tiny 0.030;
+use Module::Build::Tiny 0.036;
 Build_PL();
